Fix signiup submit on ios. Move signup confirm closer to the input.

--- a/GUI/global.less
+++ b/GUI/global.less
@@ -7,8 +7,8 @@
 @color-bekk-gray: #262626;
 
 @tablet:  ~"only screen and (min-width: 720px) and (max-width: 959px)";
-@desktop: ~"only screen and (min-width: 960px) and (max-width: 1199px)";
-@tv:      ~"only screen and (min-width: 1200px)";
+@desktop: ~"only screen and (min-width: 960px) and (max-width: 1399px)";
+@tv:      ~"only screen and (min-width: 1400px)";
 
 @import "buttons";
 
